# Backgammon

final_project1/: CMakeLists.txt
final_project1/src/: board.cxx  board.hxx  controller.cxx  controller.hxx  dice.cxx  dice.hxx  main.cxx  model.cxx  model.hxx  player.cxx  player.hxx  view.cxx  view.hxx
final_project1/test/: model_test.cxx
